# NaturalLanguage_gRPC

./: 2017-04-06 19-43-53.m4v  CMakeLists.txt  Makefile  NaturalLanguage.proto  README.md  natural_language.cpp
src/natural_language/: natural_language.cpp  natural_language.hpp.in
src/proto/: natural_language.proto
